# laika-api

./: .gitignore  AGENTS.md  README.md  main.py  pyproject.toml  test.py
app/: agent.py  main.py  tools.py
src/: agent.py  main.py  tools.py  utils.py
src/models/: __init__.py  schemas.py  session.py
src/prompts/: SYSTEM.md
src/repositories/: __init__.py  agent_singleton.py  chromadb_singleton.py  document_repository.py  message_repository.py  session_repository.py  sqlite_singleton.py
src/routers/: __init__.py  agent_router.py  document_router.py  session_router.py
src/services/: agent_service.py
