[project]
name = "langchaintest"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aiofiles>=25.1.0",
    "langchain>=1.3.14",
    "langchain-google-genai>=4.2.7",
    "langchain-ollama>=1.1.0",
    "langgraph>=1.2.9",
    "rich>=15.0.0",
    "transformers>=5.14.1",
]
