[project]
name = "laika"
version = "0.1.0"
description = "Um agente de IA coberto por uma API projetado para ser um assistente de estudos."
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aiofiles>=25.1.0",
    "chromadb>=1.5.9",
    "langchain>=1.3.14",
    "langchain-ollama>=1.1.0",
    "langgraph>=1.2.9",
    "pillow>=12.3.0",
    "rich>=15.0.0",
]
